k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vanyaai
  namespace: vanyaai
spec:
  selector:
    app: vanyaai
  ports:
    - name: http
      port: 80
      targetPort: 8001
  type: ClusterIP
